home page align image bug

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -166,7 +166,7 @@ margin-top:10%;
 img {
     vertical-align: middle;
     border-style: none;
-    margin: 20px;
+    margin: 25px;
 }
 }
 
@@ -199,7 +199,7 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
 position:absolute;
 transform: matrix(1, -0.07, 0.07, 1, 0, 0);
 height: 479.17px;
-left: 35%;
+left: 40%;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
 
 }
@@ -209,7 +209,7 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
 position:absolute;
 transform: matrix(0.98, 0.18, -0.2, 0.98, 0, 0);
 height: 490.71px;
-left: 45%;
+left: 52%;
 margin-top:25%;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
 
